--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "tsc -p tsconfig.json",
     "lint": "eslint --ext .ts,.tsx --ignore-pattern node_modules .",
     "lint:fix": "eslint --ext .ts,.tsx --ignore-pattern node_modules --fix .",
-    "watch": "npm run build -- --watch"
+    "watch": "npm run build -- --watch",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "author": "",
   "license": "",
@@ -16,7 +19,10 @@
     "@figma/plugin-typings": "^1.114.0",
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "@typescript-eslint/parser": "^6.12.0",
+    "@types/jest": "^29.5.8",
     "eslint": "^8.54.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1",
     "typescript": "^5.3.2"
   },
   "eslintConfig": {
@@ -40,5 +46,17 @@
         }
       ]
     }
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "testMatch": ["<rootDir>/src/tests/**/*.test.ts"],
+    "collectCoverageFrom": [
+      "src/utils.ts",
+      "!node_modules/**",
+      "!dist/**",
+      "!coverage/**"
+    ],
+    "coverageReporters": ["text", "lcov", "html"]
   }
 }
